# Codegeist-2021

./: .gitignore  README.md
Minutes-Creator/: manifest.yml  package.json
Text-Summarizer/: README.md  manifest.yml  package.json
Text-Summarizer/Text-Summarizer-Api/: .gitignore  Containerfile  README.md  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml
Text-Summarizer/Text-Summarizer-Forge/: package-lock.json
Text-Summarizer/Text-Summarizer-Web-UI/: .gitignore  README.md  package.json  serverless.yml
Text-Summarizer/Text-Summarizer-Web-UI/src/interface/: execution.interface.ts
Text-Summarizer/Text-Summarizer-Web-UI/src/pages/: _app.tsx  index.tsx  input.tsx
Text-Summarizer/src/: index.jsx
Topic-Detective/: README.md  manifest.yml  package-lock.json  package.json
Topic-Detective/src/: index 2.jsx  index.jsx
minutes-creater/: README.md  manifest.yml  package-lock.json
minutes-creater/src/: index.jsx
topicSearch-resultSummry/: README.md  manifest.yml
topicSearch-resultSummry/Python-DabaterSDK/python_api/: keyPointAnalysis.py
topicSearch-resultSummry/body/: anonymous_export_view.json  atlas_doc_format.json  body-options.json  dynamic.json  editor.json  editor2.json  export_view.json  storage.json  styled_view.json  view.json
topicSearch-resultSummry/src/: index.jsx
