[tool.poetry]
name = "python-debater-api"
version = "0.1.0"
description = ""
authors = ["Tomonobu Sembokuya <tomo@1003.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
debater-python-api = { path = "vendor/python_api" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
